[gd_scene load_steps=3 format=3 uid="uid://bauok06lsstkg"]

[ext_resource type="Script" path="res://addons/gamepush/Demo/Modules/shedulers.gd" id="1_yamjx"]
[ext_resource type="StyleBox" uid="uid://b8gk1mmy8e4dt" path="res://addons/gamepush/Demo/GP_Green_box_flat.tres" id="2_yomd8"]

[node name="Rewards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yamjx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = ExtResource("2_yomd8")

[node name="Header" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Head"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -22.0
offset_right = 85.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Schedulers"

[node name="Header" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IDLabel" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
visible = false
layout_mode = 1
offset_left = 185.0
offset_top = 21.0
offset_right = 293.0
offset_bottom = 44.0
text = "ID: 455715383"

[node name="id_or_tag" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -15.5
offset_right = 93.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "id or tag..."

[node name="day" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 116.0
offset_top = -15.0
offset_right = 303.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "day..."

[node name="trigger_id_or_tag" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -15.0
offset_right = -131.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "trigger_id_or_tag..."

[node name="ButtonGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.71
columns = 3

[node name="register" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "register"

[node name="claim_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "claim_day"

[node name="claim_day_additional" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "claim_day_additional"

[node name="claim_all_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "claim_all_day"

[node name="claim_all_days" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "claim_all_days"

[node name="list" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "list"

[node name="active_list" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "active_list"

[node name="get_scheduler" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "get_scheduler"

[node name="get_scheduler_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "get_scheduler_day"

[node name="get_scheduler_current_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "get_scheduler_current_day"

[node name="is_registered" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "is_registered"

[node name="is_today_reward_claimed" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "is_today_reward_claimed"

[node name="can_claim_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "can_claim_day"

[node name="can_claim_day_additional" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "can_claim_day_additional"

[node name="can_claim_all_day" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "can_claim_all_day"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/claim_day" to="." method="_on_claim_day_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/claim_day_additional" to="." method="_on_claim_day_additional_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/claim_all_day" to="." method="_on_claim_all_day_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/claim_all_days" to="." method="_on_claim_all_days_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/list" to="." method="_on_list_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/active_list" to="." method="_on_active_list_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/get_scheduler" to="." method="_on_get_scheduler_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/get_scheduler_day" to="." method="_on_get_scheduler_day_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/get_scheduler_current_day" to="." method="_on_get_scheduler_current_day_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/is_registered" to="." method="_on_is_registered_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/is_today_reward_claimed" to="." method="_on_is_today_reward_claimed_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/can_claim_day" to="." method="_on_can_claim_day_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/can_claim_day_additional" to="." method="_on_can_claim_day_additional_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/can_claim_all_day" to="." method="_on_can_claim_all_day_pressed"]
